--- a/memory-cards/src/components/Level/Level.module.css
+++ b/memory-cards/src/components/Level/Level.module.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anta&family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Mukta:wght@200;300;400;500;600;700;800&family=Orienta&family=Oswald:wght@200..700&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Share+Tech&family=Slackside+One&family=Unna:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .level {
-    /* max-width: 85em;
-    margin: 0 auto; */
     border-radius: 0.5em;
     display: flex;
     height: 100vh;
@@ -13,14 +11,14 @@
 }
 
 .info {
-    flex-basis: 20%;
+    flex-basis: 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     font-family: Share Tech;
-    margin: 2em;
+    margin: 0.5em;
     font-size: 2em;
     border: 1px solid white;
     border-radius: 0.5em;
@@ -43,12 +41,18 @@
     letter-spacing: 0.1em;
 }
 
-
 .cards {
     flex-basis: 80%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.cardsList {
+    display: flex;
+    flex-wrap: wrap;
     gap: 1em;
+    list-style-type: none;
+    padding-left: 0.5em;
 }
