--- a/memory-cards/src/components/Level/Level.module.css
+++ b/memory-cards/src/components/Level/Level.module.css
@@ -18,7 +18,7 @@
     justify-content: center;
     text-align: center;
     font-family: Share Tech;
-    margin: 0.5em;
+    margin: 5.5em 0.5em;
     font-size: 2em;
     border: 1px solid white;
     border-radius: 0.5em;
