--- a/memory-cards/src/components/CardList/CardList.module.css
+++ b/memory-cards/src/components/CardList/CardList.module.css
@@ -1,7 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anta&family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Mukta:wght@200;300;400;500;600;700;800&family=Orienta&family=Oswald:wght@200..700&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Share+Tech&family=Slackside+One&family=Unna:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 .cardsList {
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
     list-style-type: none;
     padding-left: 0.5em;
+}
+
+.newGameContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.newGame {
+    font-family: Share Tech;
+    font-size: 2em;
+    padding: 0.5em 1em;
+    text-transform: uppercase;
+    background: rgb(10, 10, 117);
+    color: white;
+    border-color: white;
+    border-radius: 0.3em;
+}
+
+.newGame:hover {
+    font-size: 2.5em;
+    letter-spacing: 0.1em;
+    transition: 0.3s ease-in-out;
+    background: rgb(82, 117, 194);
+    color: white;
 }
