--- a/memory-cards/src/components/CardList/CardList.module.css
+++ b/memory-cards/src/components/CardList/CardList.module.css
@@ -2,8 +2,9 @@
 
 .cardsList {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 1em;
+    gap: 2em;
     list-style-type: none;
     padding-left: 0.5em;
 }
