--- a/memory-cards/src/components/Game/Game.module.css
+++ b/memory-cards/src/components/Game/Game.module.css
@@ -11,7 +11,7 @@
     display: flex;
     max-width: 85em;
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .info {
@@ -51,3 +51,11 @@
     margin-top: 0.5em;
 }
 
+@media (max-width: 550px) {
+
+    levelLebel,
+    .timeLebel,
+    .bestTimeLebel {
+        font-size: 0.5em;
+    }
+}
