--- a/memory-cards/src/components/CardList/CardList.module.css
+++ b/memory-cards/src/components/CardList/CardList.module.css
@@ -3,6 +3,7 @@
 .cardsList {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 2em;
     list-style-type: none;
@@ -34,4 +35,3 @@
     background: rgb(82, 117, 194);
     color: white;
 }
-
